add multi property validate